syntax = "proto3";
package msgpb;

message Message {
  int64 offset = 1;
  bytes value = 2;
}

message Ack {
  int64 offset = 1;
}

message MessageBig {
  int64 offset1 = 1;
  int64 offset2 = 2;
  int64 offset3 = 3;
  int64 offset4 = 4;
  int64 offset5 = 5;
  int64 offset6 = 6;
  int64 offset7 = 7;
  int64 offset8 = 8;
  int64 offset9 = 9;
  bytes value = 10;
}

message AggregatedMetric {
  RawMetric raw_metric = 1;
  StoragePolicy storage_policy = 2;
}

message StoragePolicy {
  Resolution resolution = 1;
  Retention retention = 2;
}

message Resolution {
  int64 window = 1;
  int64 precision = 2;
}

message Retention {
  int64 retention = 1;
}

message RawMetric {
  bytes id = 1;
  int64 nanos = 2;
  double value = 3;
}